[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
hashbrown = "0.14.3"
itertools = "0.12.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
